<resources>
    <string name="app_name">SIPP KLING</string>
    <string name="desc_app">Sistem Informasi Pemetaan\nProfil Kesehatan Lingkungan</string>
    <string name="desc2_app">Sistem Informasi\nPemetaan Profil\nKesehatan Lingkungan</string>
    <string name="about">
        Pemetaan Profil Kesehatan Lingkungan UPT Puskesmas Kecamatan Limo adalah Sistem Informasi berbasis Web dan Android yang menggunakan basis data GIS untuk input data sekaligus memetakan data Profil Kesehatan Lingkungan di seluruh wilayah Kecamatan yang ada di Kota Depok.
    </string>
    <string name="mulai">
        Mulai\nPendataan
    </string>
    <string name="developer">
        <b>Founded : September 2017</b>\n
        Develeped by TiregDev
    </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string-array name="periode">
        <item>Januari</item>
        <item>Juni</item>
    </string-array>
    <string-array name="thn">
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
    </string-array>
    <string name="isiJadwal">
        1. 2-8 Januari pendataan untuk Kecamatan Limo\n2. 10-16 Januari pendataan untuk Kecamatan Beji\n3. 17-25 Januari pendataan untuk semua kecamatan
    </string>
    <string name="isiJadwal2">
        1. 3-9 Juni pendataan untuk Kecamatan Sawangan\n2. 10-16 Juni pendataan untuk Kecamatan Cilodong\n3. 19-29 Juni pendataan untuk semua kecamatan yang belum melakukan pendataan
    </string>
    <string name="reward">
        <b>SELAMAT</b> kepada para Kader Kesling dengan jumlah pendataan terbanyak!
    </string>
    <string name="almt1">
        Jalan H. Niin, Limo, Kota Depok, Jawa Barat 16514, Indonesia
    </string>
    <string name="almt2">
        Jl. Kp. Baru Raya, Grogol, Limo, Kota Depok, Jawa Barat, Indonesia
    </string>
    <string name="almt3">
        Jl. Swadaya, Limo, Kota Depok, Jawa Barat 16514, Indonesia
    </string>
    <string name="rs">Rumah\nSehat</string>
    <string name="sab">SAB</string>
    <string name="dam">Depot Air Minum</string>
    <string name="ttu">Tempat-tempat\nUmum</string>
    <string name="tpm">Tempat\nPengelolaan\nMakanan</string>
    <string name="pjb">PJB</string>
    <string name="pkl">Pelayanan\nKesehatan\nLingkungan</string>
    <string-array name="choice_array">
        <item>YA</item>
        <item>TIDAK</item>
    </string-array>
    <string name="ket">Keterangan :</string>
    <string name="ketRS">1. RS = Rumah Sehat</string>
    <string name="RS_Jamban"><b>Jamban Sehat</b></string>
    <string name="RS_JambanKet">Menggunakan jamban?</string>
    <string name="RS_Jamban1">Septik Tank</string>
    <string name="RS_Jamban2">Koya / Empang</string>
    <string name="RS_Jamban3">Kali</string>
    <string name="RS_Jamban4">Helikopter</string>
    <string name="RS_SPAL"><b>SPAL</b></string>
    <string name="RS_SPAL1">Tertutup</string>
    <string name="RS_SPAL2">Terbuka</string>
    <string name="nik">NIK (Sesuai KK)</string>
    <string name="noKIS">No KIS</string>
    <string name="statusRumah">Status Rumah:</string>
    <string name="statusRumah1">Kontrak</string>
    <string name="statusRumah2">Milik Sendiri</string>
    <string name="ketSAB">2. SAB = Sumber Air Bersih</string>
    <string name="ketTTU">4. TTU = Tempat_tempat Umum</string>
    <string name="ketTPM">2. TPM = Tempat Pengelolaan Makan</string>
    <string name="ketPJB">6. PJB = Pemantauan Jentik Berkala</string>
    <string name="ketPJB3"><b>Pemantauan Jentik Berkala</b></string>
    <string name="ketPJB2">Apakah ada jentik?</string>
    <string name="ketPKL">3. PKL = Pelayanan Kesehatan Lingkungan</string>
    <string-array name="sab_arrays">
        <item>Pompa Tangan Dangkal/Dalam/Listrik</item>
        <item>Sumur Gali</item>
        <item>Sumur Gali Plus</item>
        <item>Perpipaan/PDAM</item>
        <item>Mata Air</item>
    </string-array>
    <string name="rt_prompt">RT</string>
    <string-array name="rt_arrays">
        <item>RT 001</item>
        <item>RT 002</item>
        <item>RT 003</item>
        <item>RT 004</item>
        <item>RT 005</item>
        <item>RT 006</item>
        <item>RT 007</item>
        <item>RT 008</item>
        <item>RT 009</item>
        <item>RT 010</item>
        <item>RT 011</item>
        <item>RT 012</item>
        <item>RT 013</item>
        <item>RT 014</item>
        <item>RT 015</item>
        <item>RT 016</item>
        <item>RT 017</item>
        <item>RT 018</item>
        <item>RT 019</item>
        <item>RT 020</item>
    </string-array>
    <string name="rw_prompt">RW</string>
    <string-array name="rw_arrays">
        <item>RW 01</item>
        <item>RW 02</item>
        <item>RW 03</item>
        <item>RW 04</item>
        <item>RW 05</item>
        <item>RW 06</item>
        <item>RW 07</item>
        <item>RW 08</item>
        <item>RW 09</item>
        <item>RW 10</item>
        <item>RW 11</item>
        <item>RW 12</item>
        <item>RW 13</item>
        <item>RW 14</item>
        <item>RW 15</item>
        <item>RW 16</item>
        <item>RW 17</item>
        <item>RW 18</item>
        <item>RW 19</item>
        <item>RW 20</item>
    </string-array>
    <string name="namakk">Nama Kepala Keluarga</string>
    <string name="alamatkk">Alamat</string>
    <string name="jumlahkk">Jumlah Anggota Keluarga (sesuai kk)</string>
    <string name="rt">RT</string>
    <string name="rw">RW</string>
    <string name="nmrRmh">No. Rmh</string>
    <string name="next">Selesai</string>
    <string name="next2">Lanjut</string>
    <string name="jenisSAB">Pilih jenis SAB yang dipakai!</string>
    <string name="komponenRmh"><b>KOMPONEN RUMAH</b></string>
    <string name="komponenRmh1"><b>1. Langit_langit</b></string>
    <string name="komponenRmh1a">a. Tidak ada</string>
    <string name="komponenRmh1b">b. Ada, kotor, sulit dibersihkan dan rawan kecelakaan</string>
    <string name="komponenRmh1c">c. Ada, bersih dan tidak rawan kecelakaan</string>
    <string name="komponenRmh2"><b>2. Dinding</b></string>
    <string name="komponenRmh2a">a. Bukan tembok (terbuat dari anyaman bambu dan ilalang)</string>
    <string name="komponenRmh2b">b. Semi permanen/ setengah tembok/ pasangan bata dan batu yang tidak diplester/ papan yang tidak kedap air</string>
    <string name="komponenRmh2c">c. Permanen (tembok/ pasangan batu bata yang diplesteer) papan kedap air</string>
    <string name="komponenRmh3"><b>3. Lantai</b></string>
    <string name="komponenRmh3a">a. Tanah</string>
    <string name="komponenRmh3b">b. Papan/ Anyaman bambu dekat dengan tanah/ plesteran yang retak dan berdebu</string>
    <string name="komponenRmh3c">c. Diplester/ ubin/ keramik/papan (rumah panggung)</string>
    <string name="komponenRmh4"><b>4. Jendela kamar tidur</b></string>
    <string name="komponenRmh4a">a. Tidak ada</string>
    <string name="komponenRmh4b">b. Ada</string>
    <string name="komponenRmh5"><b>5. Jendela ruang keluarga</b></string>
    <string name="komponenRmh5a">a. Tidak ada</string>
    <string name="komponenRmh5b">b. Ada</string>
    <string name="komponenRmh6"><b>6. Ventilasi</b></string>
    <string name="komponenRmh6a">a. Tidak ada</string>
    <string name="komponenRmh6b">b. Ada, Ada, luas ventilasi permanen \u003c10 persen dari luas lantai</string>
    <string name="komponenRmh6c">c. Ada, luas ventilasi permanen >10 persen dari luas lantai</string>
    <string name="komponenRmh7"><b>7. Lubang asap dapur</b></string>
    <string name="komponenRmh7a">a. Tidak ada</string>
    <string name="komponenRmh7b">b. Ada, lubang ventilasi dapur \u003c10 persen dari luas lantai dapur</string>
    <string name="komponenRmh7c">c. Ada, lubang ventilasi dapur >10 persen dari luas lantai dapur (asap keluar dengan sempurna) atau ada exhaust fan ada peralatan lain yang sejenis</string>
    <string name="komponenRmh8"><b>8. Pencahayaan</b></string>
    <string name="komponenRmh8a">a. Tidak terang, tidak dapat dipergunakan untuk membaca</string>
    <string name="komponenRmh8b">b. Kurang terang, sehingga kurang jelas membaca dengan normal</string>
    <string name="komponenRmh8c">c. Terang dan tidak silau sehingga dapat dipergunakan untuk membaca dengan normal</string>
    <string name="saranasanitasi"><b>SARANA SANITASI</b></string>
    <string name="saranasanitasi1"><b>1. Sarana air bersih (SGL/ SPT/ PP/ KU/ PAH)</b></string>
    <string name="saranasanitasi1a">a. Tidak ada</string>
    <string name="saranasanitasi1b">b. Ada, bukan milik sendiri dan tidak memenuhi syarat kesehatan</string>
    <string name="saranasanitasi1c">c. Ada, milik sendiri dan tidak memenuhi syarat kesehatan</string>
    <string name="saranasanitasi1d">d. Ada, bukan milik sendiri dan memenuhi syarat kesehatan</string>
    <string name="saranasanitasi1e">e. Ada, milik sendiri dan memenuhi syarat kesehatan</string>
    <string name="saranasanitasi2"><b>2. Jamban (Sarana pembuangan kotoran)</b></string>
    <string name="saranasanitasi2a">a. Tidak ada</string>
    <string name="saranasanitasi2b">b. Ada, bukan leher angsa, tidak ada tutup, disalurkan kesungai/kolam</string>
    <string name="saranasanitasi2c">c. Ada, bukan leher angsa ada ditutup (leher angsa), disalurkan kesungai/ kolam</string>
    <string name="saranasanitasi2d">d. Ada, bukan leher angsa ada tutup  septic tank</string>
    <string name="saranasanitasi2e">e. Ada, leher angsa, septic tank</string>
    <string name="saranasanitasi3"><b>3. Sarana pembuangan air limbah (SPAL)</b></string>
    <string name="jenisTTU1">Tempat Ibadah</string>
    <string name="jenisTTU4">Pasar</string>
    <string name="jenisTTU5">Sekolah</string>
    <string name="jenisTTU6">Pesantren</string>
    <string name="jenisTTU7">Rumah Makan dan Restaurant</string>
    <string name="jenisTTU8">Kolam Renang</string>
    <string name="jenisTTU9">Pemerikasaan Jasa Boga</string>
    <string name="puskes">Puskesmas</string>
    <string name="rmhskt">Rumah Sakit</string>
    <string name="klinik">Klinik</string>
    <string name="hotel">Hotel</string>
    <string name="hm">Hotel Melati</string>
    <string name="descDAM">Berikut adalah data form untuk pendataan <b>Depot Air Minum</b></string>
    <string name="descTTU_tpm">Berikut adalah data form untuk pemeriksaan kelayakan hygiene sanitasi <b>Rumah Makan dan Restoran</b></string>
    <string name="descPsr">Berikut adalah data form untuk <b>pemeriksaan inspeksi pasar</b></string>
    <string name="descJasaBoga">Berikut adalah data form untuk <b>laporan pemeriksaan/pengawasan jasa boga</b></string>
    <string name="descSekolah">Berikut adalah data form untuk <b>penilaian kesehatan lingkungan sekolah</b></string>
    <string name="descPesantren">Berikut adalah data form untuk <b>penilaian kesehatan lingkungan pesantren</b></string>
    <string name="descRumahSakit">Berikut adalah data form untuk <b>penilaian kesehatan lingkungan rumah sakit</b></string>
    <string name="descKlinik">Berikut adalah data form untuk <b>penilaian kesehatan klinik</b></string>
    <string name="descHotel">Berikut adalah form data untuk <b>penilaian kesehatan lingkungan hotel</b></string>
    <string name="descHotelMelati">Berikut adalah data form untuk <b>penilaian kesehatan lingkungan hotel melati</b></string>
    <string name="descPuskesmas">Berikut adalah data form untuk <b>penilaian kesehatan lingkungan puskesmas</b></string>
    <string name="descKolam">Berikut adalah data form untuk <b>penilaian kesehatan lingkungan kolam renang</b></string>
    <string name="descTempatIbadah">Berikut adalah form untuk penilaian hygiene sanitasi <b>Tempat Ibadah</b></string>
    <string name="descFaskes">Fasilitas Kesehatan terbagi menjadi 3 kategori yaitu <b>Klinik, Puskesmas, dan Rumah Sakit</b></string>
</resources>