<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <RelativeLayout
        android:id="@+id/jasaboga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/picJb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/desc_app"
            android:src="@drawable/boga" />

        <TextView
            android:id="@+id/jdlJb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@id/picJb"
            android:text="@string/jenisTTU9"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/jdlJb"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@id/picJb"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/descJasaBoga" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/Abu"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <RelativeLayout
        android:id="@+id/restoran"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/picResto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/desc_app"
            android:src="@drawable/tpm" />

        <TextView
            android:id="@+id/jdlResto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@id/picResto"
            android:text="@string/jenisTTU7"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/jdlResto"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@id/picResto"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/descTTU_tpm" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/Abu"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <RelativeLayout
        android:id="@+id/dam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/picDAM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/desc_app"
            android:src="@drawable/dam" />

        <TextView
            android:id="@+id/jdlDAM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@id/picDAM"
            android:text="@string/dam"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/jdlDAM"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@id/picDAM"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/descDAM" />

    </RelativeLayout>

</LinearLayout>