<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <RelativeLayout
        android:id="@+id/puskesmas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/picJb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/desc_app"
            android:src="@drawable/pesantren" />

        <TextView
            android:id="@+id/jdlJb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@id/picJb"
            android:text="@string/puskes"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/jdlJb"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@id/picJb"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/descPuskesmas" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/Abu"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <RelativeLayout
        android:id="@+id/rumahsakit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/picResto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/desc_app"
            android:src="@drawable/rumah_sakit" />

        <TextView
            android:id="@+id/jdlResto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@id/picResto"
            android:text="@string/rmhskt"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/jdlResto"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@id/picResto"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/descRumahSakit" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/Abu"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <RelativeLayout
        android:id="@+id/klinik"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/picDAM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/desc_app"
            android:src="@drawable/industri_rumahan" />

        <TextView
            android:id="@+id/jdlDAM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@id/picDAM"
            android:text="@string/klinik"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/jdlDAM"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@id/picDAM"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/descKlinik" />

    </RelativeLayout>

</LinearLayout>